--- a/pom.xml
+++ b/pom.xml
@@ -50,17 +50,86 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
+
+	
 	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.1</version>
+					<configuration>
+						<source>1.7</source>
+						<target>1.7</target>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 		<plugins>
 			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.6</version>
+				<executions>
+				<execution>
+				<id>copy-resources</id>
+				<phase>validate</phase>
+				<goals>
+				<goal>copy-resources</goal>
+				</goals>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+				<outputDirectory>${user.home}/Documents/uniYearFive/semesterProject/jar</outputDirectory>
+				<resources>
+				<resource>
+				<directory>resources</directory>
+				<filtering>true</filtering>
+				</resource>
+				</resources>
 				</configuration>
+                </execution>
+				</executions>
 			</plugin>
+		<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-dependency-plugin</artifactId>
+		<executions>
+		<execution>
+		<id>copy-dependencies</id>
+		<phase>prepare-package</phase>
+		<goals>
+		<goal>copy-dependencies</goal>
+		</goals>
+		<configuration>
+		<outputDirectory>${user.home}/Documents/uniYearFive/semesterProject/jar/lib</outputDirectory>
+		<overWriteReleases>false</overWriteReleases>
+		<overWriteSnapshots>false</overWriteSnapshots>
+		<overWriteIfNewer>true</overWriteIfNewer>
+		</configuration>
+		</execution>
+		</executions>
+		</plugin>
+		<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-jar-plugin</artifactId>
+		<configuration>
+		<archive>
+		<manifest>
+		<addClasspath>true</addClasspath>
+		<classpathPrefix>lib/</classpathPrefix>
+		<mainClass>org.hive2hive.client.stockholmClient</mainClass>
+		</manifest>
+		<manifestEntries>
+		<Class-Path>.</Class-Path>
+		</manifestEntries>
+		</archive>
+ 
+		<finalName>stockholmClient</finalName>
+		</configuration>
+		</plugin>
 		</plugins>
 	</build>
+	
+	
+	
 	
 </project>
