--- a/org.hive2hive.core/pom.xml
+++ b/org.hive2hive.core/pom.xml
@@ -62,6 +62,11 @@
 			<scope>test</scope>
 			<classifier>tests</classifier>
 		</dependency>
+		<dependency>
+			<groupId>org.hive2hive.ml</groupId>
+			<artifactId>org.hive2hive.ml</artifactId>
+			<version>1.1.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
